--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "expo": "~46.0.9",
+    "expo-dev-client": "~1.2.1",
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
-    "react-native": "0.69.5"
+    "react-native": "0.69.5",
+    "react-native-google-mobile-ads": "^7.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
