--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-native": "0.69.5",
     "react-native-google-mobile-ads": "^7.0.1",
     "react-native-safe-area-context": "4.3.1",
-    "react-native-screens": "~3.15.0"
+    "react-native-screens": "~3.15.0",
+    "expo-updates": "~0.14.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
