--- a/app.json
+++ b/app.json
@@ -41,6 +41,6 @@
     }
   },
   "react-native-google-mobile-ads": {
-    "android_app_id": "ca-app-pub-1551557160405536~4795412244ca-app-pub-1551557160405536~4795412244"
+    "android_app_id": "ca-app-pub-7992663111948996~7999056430"
   }
 }
